EQ6-98 mise à jour des tests InternshipManagerController pour refléter les nouveaux noms de paramètres d'API et simplification des assertions